Fixing alignment of input box on podcast detail page.

--- a/src/DevPodcasts.Web/Content/styles.less
+++ b/src/DevPodcasts.Web/Content/styles.less
@@ -200,6 +200,7 @@ h6,
             display: inline-block;
             margin-left: 7px;
             height: 100%;
+            vertical-align: middle;
         }
 
         .glyphicon {
